changes to thread post/put. added authorization
